Kubernetes/Upgrade-BlueGreen/ingress-version1.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dizertatie-ingress-version1
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dizertatie.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dizertatie-service-version1
                port:
                  number: 80
